--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -23,6 +23,15 @@
     background-color: #c80000;
     color: white;
 }
+.editbutton{
+    border-radius: 0.5rem ;
+    border: 0;
+    color: #390999
+}
+.editbutton:hover{
+    background-color: #f0ba0b;
+    color: white;
+}
 .acceptbutton:hover{
     background-color: #00ac72;
     color: white;
@@ -54,7 +63,7 @@
     text-align: center;
     max-height: 700px;
     overflow-y: auto;
-    background-color: #feffff;
+    background-color: #ffffff;
 }
 
 .miniaccount{
