--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -3,6 +3,7 @@
 .driverprofile{
     font-family: 'Roboto', sans-serif;
     padding: 2rem 0;
+    margin: 0 2rem;
 }
 .acceptbutton{
     border-radius: 0.5rem ;
