--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -1,8 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
+.responsive{
+    border-radius: 50%;
+    width: 3rem;
+    max-width : 4rem; 
+    height: auto;
+}
+
+.profilehosp{
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    margin-bottom: 1rem;
+    color: #390999;
+}
+
 .driverprofile{
     font-family: 'Roboto', sans-serif;
-    padding: 2rem 0;
+    padding: 1rem 0;
     margin: 0 2rem;
 }
 .acceptbutton{
@@ -13,7 +27,7 @@
 .rejectbutton{
     border-radius: 0.5rem ;
     border: 0;
-    color: #390999
+    color: #390999;
 }
 .deletebutton{
     border-radius: 0.5rem ;
